--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="API_KEY"
+            android:value="${tmdb_api_key}"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
